--- a/libro/Licencia.tex
+++ b/libro/Licencia.tex
@@ -3,9 +3,7 @@
 }
 \rule[.5ex]{\linewidth}{1pt} 
 
-Noviembre de 2020
-
-© 2020, 2018, 2015, 2014, 2013, 2012, 2011, 2010, 2009 Oscar Perpiñán Lamigueiro
+© 2023 Oscar Perpiñán Lamigueiro
 
 Este documento está accesible en \url{https://github.com/oscarperpinan/esf}
 
